<resources>
    <string name="app_name">MisContactos</string>
    <string name="nombrePersona">Jorge Soasti</string>
    <string name="telefonoPersona">0984687554</string>
    <string name="emailPersona">jorgesoasti@gmail.com</string>
    <string name="pNombre">Nombre</string>
    <string name="pTelefono">Telefono</string>
    <string name="pEmail">Email</string>
    <string name="pLikes">0 Likes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1967182316855975</string>
</resources>
