<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jorgesoasti.miscontactos.DetalleContacto">

    <include android:id="@id/tlbMiActionBar"
        layout="@layout/actionbar"></include>

    <TextView
        android:id="@+id/tvNombrePersona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombrePersona"
        android:textStyle="bold"
        android:textSize="@dimen/nombreContacto"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:onClick="llamar"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/imgvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone"/>

        <TextView
            android:id="@+id/tvTelefonoPersona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefonoPersona"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:onClick="enviarEmail"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/imgvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email"/>

        <TextView
            android:id="@+id/tvEmailPersona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailPersona"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>



</LinearLayout>
