<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvContacto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgFotoContactoCV"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/fotocontacto"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/btnLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/like"
                android:layout_alignParentLeft="true"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/tvNombreCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pNombre"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/tvTelefonoCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pTelefono"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pLikes"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="20sp"/>

        </RelativeLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>